--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -79,7 +79,7 @@
     display: flex;
     flex-direction: row;
     height: 80rpx;
-    margin-left: 20rpx;
+    margin-left: 30rpx;
     align-items: center;
 
 }
@@ -87,6 +87,9 @@
 .result-text {
     font-size: 14pt;
 
+}
+.result-tag-view:last-child{
+    border-bottom:0rpx;
 }
 
 .result-text-right:before
@@ -130,14 +133,27 @@
 .hot {
     /*margin-top: 200rpx;*/
     background-color: #eee;
-    height: 321rpx
+    height: 256rpx;
+    padding: 0rpx 0 1rpx 0;
 }
-
+.hot-p{
+    border-top: 20rpx solid #EFEFF4;
+    /*margin-top: 20rpx;*/
+}
 .hot-title-view {
     display: flex;
-    margin-top: 5rpx;
     height: 60rpx;
     padding-left: 30rpx;
+    border-bottom: 2rpx solid #ccc;
+    /*justify-content: center;*/
+    align-items: center;
+    background-color: #fff;
+}
+.hot-title-search {
+    display: flex;
+    height: 60rpx;
+    padding-left: 30rpx;
+
     /*justify-content: center;*/
     align-items: center;
     background-color: #fff;
@@ -154,6 +170,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    /*height: 250rpx;*/
 }
 
 .hot-button {
@@ -161,7 +178,9 @@
     width: 249rpx;
     height: 80rpx;
     margin-top: 5rpx;
+    /*margin-bottom:5rpx;*/
     background-color: #fff;
+    /*border: 1rpx solid #b2b2b2;*/
     justify-content: center;
     align-items: center;
 }
