--- a/pages/component/recipe-list.wxml
+++ b/pages/component/recipe-list.wxml
@@ -1,6 +1,7 @@
 
 <template name="recipe-list">
-    <scroll-view scroll-y="true" class="recipe-list-body"  bindscrolltolower="loadMore" bindscrolltoupper="upper" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
+    <scroll-view scroll-y="true" class="recipe-list-body"  bindscrolltolower="loadMore" bindscrolltoupper="upper"
+                 scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}" >
 
         <view  data="{{item}}" wx:for="{{recipes}}">
             <navigator  data-idfive="{{item.objectId}}" data-titlefive="{{item.title}}" bindtap="tapFive">
