<video>  组件不能写在<view-socroll>里，要不然会是<video>无法滚动 暂时取消这个功能

--- a/pages/recipe/recipe.wxml
+++ b/pages/recipe/recipe.wxml
@@ -13,7 +13,10 @@
 </loading>
 <block>
 <view wx:if="{{loaded}}">
-    <scroll-view scroll-y="true" wx:if="{{recipe.title}}" bindscrolltolower="loadMore" bindscrolltoupper="upper" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
+    <view scroll-y="true" wx:if="{{recipe.title}}">
+          <!--bindscrolltolower="loadMore" bindscrolltoupper="upper" -->
+          <!--scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}"-->
+
 
 
         <view class="head">
@@ -81,7 +84,7 @@
         </view>
 
 
-    </scroll-view>
+    </view>
 </view>
 <view wx:else>
     <view>aaa</view>
