收藏的去重复 之前认为在模拟器<scroll-view>的bindscrolltoupper，bindscrolltolower无效，其实是自己的<scroll-view>的高度没有定义，模拟器不知道高度，所以不能到底或到顶。 在JS中page一个空量swiperHight，onReady（页面渲染完成后）  onReady(){         var that = this;         wx.getSystemInfo({             success: function(res) {                 console.log('onReady!!!!',res);                 that.setData({                     swiperHeight: (res.windowHeight)                 });             }         })     }     用的是模板，所以需要在wxml     data=“{swiperHight}”

--- a/app.wxss
+++ b/app.wxss
@@ -32,20 +32,27 @@ page {
     display: flex;
     flex: 1;
     flex-direction: column;
+    /*overflow: hidden;*/
+    width:100%;
+    height:100%;
+    /*margin: 0;*/
+    /*border: 0;*/
+
 }
 
 
-.recipe-list-body {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-}
+/*.recipe-list-body {*/
+    /*display: flex;*/
+    /*flex: 1;*/
+    /*flex-direction: column;*/
+/*}*/
 
 .recipeFull {
     display: flex;
     /*flex: 1;*/
     border-bottom: 2rpx solid #ccc;
     cursor: pointer;
+    /*height: 100%;*/
 }
 
 .recipeFull image {
