--- a/pages/recipe/recipe.wxml
+++ b/pages/recipe/recipe.wxml
@@ -73,20 +73,17 @@
                 </navigator>
             </view>
         </view>
-        <view class="tips">
-            <view wx:if="{{hasMore}}">
-                <image src="/images/loading.gif" mode="aspectFill"/>
-                <text>玩了命的加载中...</text>
-            </view>
-            <view wx:else>
-                <text>没有更多内容了</text>
-            </view>
-        </view>
+        <!--<view class="tips">-->
+            <!--<view wx:if="{{hasMore}}">-->
+                <!--<image src="/images/loading.gif" mode="aspectFill"/>-->
+                <!--<text>玩了命的加载中...</text>-->
+            <!--</view>-->
+            <!--<view wx:else>-->
+                <!--<text>没有更多内容了</text>-->
+            <!--</view>-->
+        <!--</view>-->
 
 
     </view>
-</view>
-<view wx:else>
-    <view>aaa</view>
 </view>
 </block>
