原来有 onPullDownRefresh页面相关事件处理函数--监听用户下拉动作 之前一直考虑为什么bindscrolltoupper到顶就触发，做下拉刷新是不是不科学

--- a/pages/component/recipe-list.wxml
+++ b/pages/component/recipe-list.wxml
@@ -1,7 +1,6 @@
 
 <template name="recipe-list" >
-    <scroll-view scroll-y="true" class="recipe-list-body"  bindscrolltolower="loadMore" bindscrolltoupper="upper"
-                 style="height:{{swiperHeight}}px">
+    <scroll-view scroll-y="true" class="recipe-list-body"  bindscrolltolower="loadMore" style="height:{{swiperHeight}}px">
 
         <view  data="{{item}}" wx:for="{{recipes}}">
             <navigator  data-idfive="{{item.objectId}}" data-titlefive="{{item.title}}" bindtap="tapFive">
