navigator的效果实现，有一个bingtouchstart（触碰开始）一个bingtouchend（触碰结束） 做两个方法，toustart时获取Id（唯一）   let Id = e.currentTarget.dataset.idfive; 再通过三元表达式{{item.objectId=Id?touchstart:touch}}来改变样式，包括 字的display:none

--- a/app.wxss
+++ b/app.wxss
@@ -51,7 +51,7 @@ page {
     display: flex;
     /*flex: 1;*/
     border-bottom: 2rpx solid #ccc;
-    cursor: pointer;
+
     /*height: 100%;*/
 }
 
@@ -67,19 +67,43 @@ page {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color:rgba(52,52,52,0.1);
+    /*background-color:rgba(52,52,52,0.3);*/
     width: 750rpx;
     height: 421rpx;
+    /*cursor: pointer;*/
 }
 
-.recipeFull .title {
+.touch{
+    background-color: rgb(52,52,52);
+    opacity: 0.7;
+    /*opacity: 0.3;*/
+}
+.touchstart{
+    /*background-color: rgb(52,52,52);*/
+
+}
+.title {
     color: #fff;
     font-size: 14pt;
+
+    /*background-color: #eeeeee;*/
+
+}
+.titlestart {
+    color: #fff;
+    font-size: 14pt;
+    display:none;
+
 }
 
-.recipeFull .subtitle{
+.subtitle{
     color: #fff;
     font-size: 11pt;
+}
+.subtitlestart{
+    color: #fff;
+    font-size: 11pt;
+    display: none;
 }
 
 /**/
