昨天晚上还纠结图片是绝对定位的，怎么用透明层覆盖上。 直接在前加一层同一级的，也用绝对定位，之前把层当作容器。所以图一直发灰白。现在互补影响了。

--- a/app.wxss
+++ b/app.wxss
@@ -75,7 +75,10 @@ page {
 
 .touch{
     background-color: rgb(52,52,52);
-    opacity: 0.7;
+    opacity: 0.2;
+    width: 750rpx;
+    height: 421rpx;
+    position: absolute;
     /*opacity: 0.3;*/
 }
 .touchstart{
