--- a/pages/hot/hot.wxml
+++ b/pages/hot/hot.wxml
@@ -1,2 +1,2 @@
 <import src="../component/recipe-list.wxml"/>
-<template is="recipe-list" data="{{ recipes, loading, hasMore, loadMore,swiperHeight}}"/>
+<template is="recipe-list" data="{{ recipes, loading, hasMore,Id, loadMore,swiperHeight}}"/>
