--- a/pages/recipe/recipe.wxss
+++ b/pages/recipe/recipe.wxss
@@ -45,8 +45,8 @@
 
 }
 .icon-image{
-    height:30rpx;
-    width:30rpx;
+    height:32rpx;
+    width:32rpx;
 }
 .desc-view {
     /*padding: 20rpx 0rpx;*/
@@ -109,21 +109,35 @@
     /*z-index:100*/
     /*opacity: 1;*/
 }
-
-.thumb {
+.thumb{
+    width:100%;
+    padding: 20rpx ;
+    border-top: 1rpx solid #eee;
+}
+.thumbstart {
     /*display: flex;*/
     /*flex-direction: column;*/
     width:100%;
     padding: 20rpx ;
     border-top: 1rpx solid #eee;
+    background: rgba(20,20,20,0.1);
 }
 .thumbclicd{
     display: flex;
     width:95%;
     justify-content:center;
-    cursor: pointer;
+    /*cursor: pointer;*/
 
 }
+/*.touch{*/
+    /*background-color: rgb(52,52,52);*/
+    /*opacity: 0.1;*/
+    /*width: 750rpx;*/
+    /*height: 200rpx;*/
+    /*position: absolute;*/
+
+    /*!*opacity: 0.3;*!*/
+/*}*/
 
 .thumb-image {
     width: 320rpx;
@@ -141,11 +155,11 @@
 
 .thumb-right-title {
     margin: 10rpx 0rpx;
-    font-size: 30rpx;
+    font-size: 11pt;
     color: #444;
 }
 
 .thumb-right-subtitle {
-    font-size: 15rpx;
+    font-size: 8pt;
     color: #444;
 }
