--- a/pages/recipeList/recipeList.wxml
+++ b/pages/recipeList/recipeList.wxml
@@ -3,4 +3,4 @@
 <!--<view>{{title}}</view>-->
 <!--<text wx:if="{{share}}">{{tkl}}</text>-->
 
-<template is="recipe-list" data="{{ recipes, loading, hasMore, loadMore }}"/>
+<template is="recipe-list" data="{{ recipes, loading, hasMore, loadMore ,Id,swiperHeight}}"/>
