视频详情页的相关做了修改。

--- a/pages/recipe/recipe.wxml
+++ b/pages/recipe/recipe.wxml
@@ -13,8 +13,8 @@
 </loading>
 <block>
 <view wx:if="{{loaded}}">
-    <scroll-view scroll-y="true" wx:if="{{recipe.title}}">
-          <!--bindscrolltolower="loadMore" bindscrolltoupper="upper" -->
+    <scroll-view scroll-y="true" wx:if="{{recipe.title}}" style="height:{{swiperHeight}}px" bindscrolltolower="loadMore">
+          <!-- bindscrolltoupper="upper" -->
           <!--scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}"-->
 
 
@@ -49,10 +49,10 @@
                 </view>
             </view>
             <view class="buttons">
-                <view class="button" bindtap="tapShare" >
-                    <icon type="success" size="25" color="{{isShare?'red':'orange'}}"/>
-                    <text>{{share}}</text>
-                </view>
+                <!--<view class="button" bindtap="tapShare" >-->
+                    <!--<icon type="success" size="25" color="{{isShare?'red':'orange'}}"/>-->
+                    <!--<text>{{share}}</text>-->
+                <!--</view>-->
                 <block>
                 <view class="button" bindtap="tapFav" wx:if="{{isFav}}" >
 
@@ -85,15 +85,15 @@
                 </view>
             </view>
         </view>
-        <!--<view class="tips">-->
-            <!--<view wx:if="{{hasMore}}">-->
-                <!--<image src="/images/loading.gif" mode="aspectFill"/>-->
-                <!--<text>玩了命的加载中...</text>-->
-            <!--</view>-->
-            <!--<view wx:else>-->
-                <!--<text>没有更多内容了</text>-->
-            <!--</view>-->
-        <!--</view>-->
+        <view class="tips">
+            <view wx:if="{{hasMore}}">
+                <image src="/images/loading.gif" mode="aspectFill"/>
+                <text>玩了命的加载中...</text>
+            </view>
+            <view wx:else>
+                <text>没有更多内容了</text>
+            </view>
+        </view>
 
 
     </scroll-view>
