如果收藏或者搜索取的值小于高度，就不会触发loadMore，所以要在之前加上list的判断，小于this.data.limit，则直接显示无更多内容。

--- a/pages/component/recipe-list.wxml
+++ b/pages/component/recipe-list.wxml
@@ -6,7 +6,7 @@
         <view  data="{{item}}" wx:for="{{recipes}}">
             <view id="{{item.objectId}}"  class="{{item.objectId==Id?'touchstart':'touch'}}"></view>
             <view data-idfive="{{item.objectId}}" data-titlefive="{{item.title}}"
-                  catchtap="tapFive" catchlongtap="tapFive">
+                  catchtap="tapFive" >
 
                 <view class="recipeFull"  >
 
